--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <h1>🔀 Zufälliges Adjektiv</h1>
-    <p>Klicke auf den Button, um ein zufälliges deutsches Adjektiv zu erhalten.</p>
+    <p>Klicke auf den Button, um ein zufälliges Adjektiv zu erhalten.</p>
     
     <button id="randomize-btn">🎲 Neues Adjektiv</button>
     
